# Credit-Decision-Platform

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
antifraud-service/: Dockerfile  pyproject.toml
antifraud-service/src/: config.local.yaml
antifraud-service/src/app/: constants.py
antifraud-service/src/app/api/: routers.py
antifraud-service/src/app/clients/: data_service_client.py  redis_client.py
antifraud-service/src/app/config/: config.py
antifraud-service/src/app/logic/: antifraud.py
antifraud-service/src/app/schemas/: antifraud.py
antifraud-service/src/tests/: conftest.py
antifraud-service/src/tests/integration/: test_antifraud_pioneer.py  test_antifraud_repeater.py
antifraud-service/src/tests/unit/: test_antifraud_pioneer.py  test_antifraud_repeater.py  test_redis.py
common/: README.md  pyproject.toml
common/src/common/: constants.py  product_list.json
common/src/common/repository/: product.py  user.py
common/src/common/schemas/: product.py  scoring.py  user.py
flow-selection-service/: Dockerfile  README.md  [SHIFT-3428] Тестирование сервиса выбора флоу.md  pyproject.toml
flow-selection-service/charts/: Chart.yaml  values.yaml
flow-selection-service/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
flow-selection-service/manifests/: configmap.yaml  deployment.yaml  service.yaml
flow-selection-service/src/: config.local.yaml
flow-selection-service/src/app/: constants.py  service.py
flow-selection-service/src/app/clients/: data_service_client.py  redis_client.py
flow-selection-service/src/app/config/: config.py  config.yaml  metrics.py
flow-selection-service/src/app/fixtures/: pioneer_products.json  repeater_products.json
flow-selection-service/src/app/logic/: user.py
flow-selection-service/src/app/middleware/: metrics.py
flow-selection-service/src/app/schemas/: product.py
flow-selection-service/src/tests/: conftest.py
flow-selection-service/src/tests/integration/: test_product.py
flow-selection-service/src/tests/unit/: test_redis.py  test_user.py
flow_selection_service/: [SHIFT-3428] Тестирование сервиса выбора флоу.md  pyproject.toml
flow_selection_service/src/app/: constants.py
flow_selection_service/src/app/api/: routers.py
flow_selection_service/src/app/logic/: user.py
flow_selection_service/src/app/repository/: product.py  products.py  user.py
flow_selection_service/src/app/schemas/: product.py
flow_selection_service/src/tests/: conftest.py
flow_selection_service/src/tests/integration/: test_product.py
flow_selection_service/src/tests/unit/: test_customer.py  test_user.py
scoring-service/: Dockerfile  README.md  pyproject.toml
scoring-service/charts/: Chart.yaml  values.yaml
scoring-service/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
scoring-service/manifests/: configmap.yaml  deployment.yaml  service.yaml
scoring-service/src/: config.local.yaml
scoring-service/src/app/: constants.py  service.py
scoring-service/src/app/api/: routers.py
scoring-service/src/app/clients/: antifraud_service_client.py  data_service_client.py
scoring-service/src/app/config/: config.py  config.yaml
scoring-service/src/app/kafka/: producer.py
scoring-service/src/app/logic/: scoring_process.py
scoring-service/src/app/repository/: user.py
scoring-service/src/app/schemas/: scoring.py
scoring-service/src/config/: config.yaml
scoring-service/src/tests/pioneer/: conftest.py  test_scoring_integration.py
scoring-service/src/tests/repeater/: conftest.py  test_scoring_integration.py
user-data-service/: .env.example  123.py  Dockerfile  README.md  alembic.ini  pyproject.toml
user-data-service/alembic/: env.py
user-data-service/alembic/versions/: 237992dc5de1_add_products.py  9101b27595d9_init_migration.py  bfe1031465ad_add_products.py  f2c97c0e97c0_init_migration.py
user-data-service/charts/: Chart.yaml  values.yaml
user-data-service/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
user-data-service/manifests/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
user-data-service/src/: config.k8s.yaml  config.yaml
user-data-service/src/app/: constants.py  seed.py  service.py
user-data-service/src/tests/: conftest.py
(+61 files in other folders)
