[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Kozlov Leonid <jimjpoggers@yandex.ru>"]
readme = "README.md"
packages = [{ include = "common", from = "src" }]

include = ["src/common/py.typed"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.0"
fastapi = "^0.118.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
