[tool.poetry]
name = "flow-selection-service"
version = "0.1.0"
description = ""
authors = ["Kozlov Leonid <jimjpoggers@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
