[tool.poetry]
name = "scoring-service"
version = "0.1.0"
description = ""
authors = ["Kozlov Leonid <jimjpoggers@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
common = {path = "../common", develop = true}
pyyaml = "^6.0.3"
respx = "^0.22.0"
aiokafka = "^0.12.0"
pydantic-settings = "^2.11.0"
pytest-asyncio = "^1.2.0"
opentelemetry-api = "^1.38.0"
opentelemetry-sdk = "^1.38.0"
opentelemetry-exporter-otlp = "^1.38.0"
opentelemetry-instrumentation-fastapi = "^0.59b0"
opentelemetry-instrumentation-requests = "^0.59b0"
prometheus-client = "^0.23.1"
opentelemetry-instrumentation-httpx = "^0.59b0"

[tool.poetry.group.dev.dependencies]
types-PyYAML = "^6.0.12.20240808"
pytest = "^8.4.2"
httpx = "^0.28.1"
ruff = "^0.13.3"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
